# OOP-University-tasks

./: .gitmodules  1.cpp  2.cpp  3.cpp  README.md
4/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  print.h  print_console.cpp  print_file.cpp  print_ostream.cpp  print_ostream.h  run.bat
5/: CMakeLists.txt  main.cpp  run.bat
5/matrix/: CMakeLists.txt
5/matrix/include/: matrix.h
5/matrix/src/: matrix.cpp  print_ostream.cpp
5/tests/: CMakeLists.txt  tests.cpp
6/: CMakeLists.txt  coder.cpp  coder.h  main.cpp
6/tests/: CMakeLists.txt  tests.cpp
8/: CMakeLists.txt  compile.bat  main.cpp  mylib.cpp  mylib.h  polska.cpp  polska.h
8/tests/: CMakeLists.txt  tests.cpp
Semester-1/4/: print_file.cpp
Semester-1/5/tests/: tests.cpp
Semester-1/8/: mylib.cpp
Semester-2/: CMakeLists.txt  run.bat
Semester-2/modules/: CMakeLists.txt  main.cpp
Semester-2/modules/entry/: big-integer-main.cpp  csv-parser-main.cpp  key-value-main.cpp  logger-main.cpp  logger.cpp  stack-main.cpp
Semester-2/modules/include/: big-integer.h  csv-keyval-converter.h  csv-parser.h  key-value.h  logger.h  stack.h
Semester-2/modules/input-files/: csv1.csv  csv2.csv  csv3.csv
Semester-2/modules/src/: big-integer.cpp  csv-keyval-converter.cpp  csv-parser.cpp  key-value.cpp  logger.cpp
Semester-2/modules/tests/: big-integer-tests.cpp  csv-parser-tests.cpp  key-value-tests.cpp  stack-tests.cpp
Semester-2/tasks/: CMakeLists.txt
Semester-2/tasks/calculating-machine/: CMakeLists.txt  calc-machine-main.cpp  calc-machine-tests.cpp  calc-machine.cpp  calc-machine.h  commands1.txt  commands2.txt  commandsIncorrect1.txt  commandsIncorrect2.txt
Semester-2/tasks/patterns/: package.json
Semester-2/tasks/patterns/src/Builder/: builder.js  builder.ts
Semester-2/tasks/patterns/src/Flyweight/: flyweight.js  flyweight.ts
Semester-2/tasks/patterns/src/Visitor/: visitor.js  visitor.ts
Semester-2/tasks/register-and-login/: CMakeLists.txt  authorizer.cpp  authorizer.h  login.cpp  register.cpp  users.txt  Пароли.txt
Семестр-1/: 1.cpp  2.cpp  3.cpp
Семестр-1/4/: CMakeLists.txt  matrix.cpp  print.h  print_console.cpp
Семестр-1/5/: CMakeLists.txt
Семестр-1/5/matrix/include/: print_ostream.h
Семестр-1/6/: coder.cpp  main.cpp
Семестр-1/6/tests/: tests.cpp
Семестр-1/7/: CMakeLists.txt  main.cpp
Семестр-1/8/tests/: tests.cpp
